force-app/main/default/objects/amorgan__Goal__c/amorgan__Goal__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>