force-app/main/default/objects/amorgan__Goal__c/fields/amorgan__CreatedRevenue__c.field-meta.xml
<CustomField>
    <fullName>amorgan__CreatedRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CreatedRevenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>