force-app/main/default/objects/amorgan__Goal__c/fields/amorgan__GoalSheet__c.field-meta.xml
<CustomField>
    <fullName>amorgan__GoalSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoalSheet</label>
    <referenceTo>amorgan__GoalSheet__c</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>