force-app/main/default/objects/amorgan__Goal__c/fields/amorgan__Volume__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>