force-app/main/default/objects/amorgan__Goal__c/fields/Monthly_Goal__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Goal__c</fullName>
    <formula>amorgan__Revenue__c</formula>
    <label>Monthly Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>